[package]
name = "filldata"
version = "0.1.0"
edition = "2021"

[dependencies]
postgres = "0.19"
clap = { version = "4.0", features = ["derive"] }
phf = { version = "0.11", features = ["macros"] }
rand = "0.8"
chrono = "0.4"
tokio = { version = "1", features = ["full"] }
tokio-postgres = "0.7"
futures = "0.3"
