[package]
name = "filldata"
version = "0.1.0"
edition = "2021"
authors = ["Layamon <sdwhlym@gmail.com>"]
description = "This is a tools for generating random data for random table schema in PostgreSQL."
homepage = "https://github.com/Layamon/filldata"
repository = "https://github.com/Layamon/filldata"
readme = "README.md"
keywords = ["tools", "PostgreSQL", "github"]
categories = ["command-line-utilities for database"]

[dependencies]
postgres = "0.19"
clap = { version = "4.0", features = ["derive"] }
phf = { version = "0.11", features = ["macros"] }
rand = "0.8"
chrono = "0.4"
tokio = { version = "1", features = ["full"] }
tokio-postgres = "0.7"
futures = "0.3"
